--- a/electron/package.json
+++ b/electron/package.json
@@ -27,7 +27,7 @@
   "dependencies": {},
   "devDependencies": {
     "@electron/rebuild": "^4.0.1",
-    "electron": "^39.2.6",
+    "electron": "39.2.6",
     "electron-builder": "^26.0.12",
     "electronmon": "^2.0.4"
   }
