--- a/settings_base.json
+++ b/settings_base.json
@@ -422,6 +422,9 @@
             "caption": {
               "type": "string"
             },
+            "bibliography": {
+              "type": "string"
+            },
             "date_created_corrected": {
               "type": "string"
             },
